manifests/dev/sabnzbd/Namespace-sabnzbd.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: sabnzbd
