manifests/dev/sabnzbd/Deployment-sabnzbd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: sabnzbd
    app.kubernetes.io/name: sabnzbd
    app.kubernetes.io/version: latest
  name: sabnzbd
  namespace: sabnzbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: sabnzbd
      app.kubernetes.io/name: sabnzbd
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: sabnzbd
        app.kubernetes.io/name: sabnzbd
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Etc/UTC
            - name: PYTHONUNBUFFERED
              value: "1"
            - name: HTTP_PROXY
              value: http://gluetun.gluetun:8888
            - name: HTTPS_PROXY
              value: http://gluetun.gluetun:8888
            - name: NO_PROXY
              value: localhost,127.0.0.1,.svc,.svc.cluster.local,sabnzbd.sabnzbd,sabnzbd.sabnzbd.svc.cluster.local
          image: linuxserver/sabnzbd:latest
          imagePullPolicy: IfNotPresent
          name: sabnzbd
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /config/Downloads
              name: downloads
            - mountPath: /config/incomplete-downloads
              name: incomplete-downloads
      nodeSelector:
        kubernetes.io/hostname: edgenix
      serviceAccountName: default
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sabnzbd-sabnzbd-config
        - name: downloads
          persistentVolumeClaim:
            claimName: sabnzbd-sabnzbd-downloads
        - name: incomplete-downloads
          persistentVolumeClaim:
            claimName: sabnzbd-sabnzbd-incomplete-downloads
