manifests/dev/sabnzbd/Service-sabnzbd.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: sabnzbd
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: sabnzbd
    app.kubernetes.io/name: sabnzbd
  type: ClusterIP
