manifests/dev/sabnzbd/Ingress-sabnzbd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: sabnzbd
  namespace: sabnzbd
spec:
  ingressClassName: traefik
  rules:
    - host: sabnzbd.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: sabnzbd
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - sabnzbd.home.kronkltd.net
      secretName: sabnzbd.home.kronkltd.net-tls
